--- a/style-bullet.7
+++ b/style-bullet.7
@@ -1,10 +1,15 @@
 .TH YED-STYLE-BULLET 7 "YED Plugin Manuals" "" "YED Plugin Manuals"
 .SH NAME
-styles/bullet \-
+styles/bullet \- A truecolor style called bullet.
 .SH CONFIGURATION
+None
 .SH COMMANDS
+None
+.SH BUFFERS
+None
 .SH NOTES
-.P
+None
 .SH VERSION
 0.0.1
 .SH KEYWORDS
+style, color, theme
